fix dark mode background bug

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -18,7 +18,7 @@
 
 .introSectionContainer {
   width: 100%;
-  background-color: $white;
+  background-color: var(--background-color);
   position: relative;
   z-index: 1;
 }
@@ -47,6 +47,7 @@
   padding: 20px;
   position: relative;
   z-index: 2;
+  min-height: 480px;
 
   @media screen and (min-width: $media-breakpoint-medium) {
     flex-direction: row;
